# hexlet_pytest

./: .coverage  README.md  pyproject.toml
tests/: test_stack.py
