[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["vitallcore <vitaslipknot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
